--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "marked": "^15.0.7",
+    "dompurify": "^3.2.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
