--- a/package.json
+++ b/package.json
@@ -10,24 +10,48 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.5",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/s3-request-presigner": "^3.901.0",
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
+    "@openai/agents": "^0.1.9",
+    "dom-to-image-more": "^3.7.1",
+    "dompurify": "^3.3.0",
+    "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "html2canvas": "^1.4.1",
+    "marked": "^17.0.0",
+    "next": "15.5.2",
+    "node-fetch": "^3.3.2",
+    "openai": "^6.6.0",
+    "pdf-lib": "^1.17.1",
+    "pretendard": "^1.3.9",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "uuid": "^13.0.0",
     "zod": "^3.25.76",
-    "marked": "^15.0.7",
-    "dompurify": "^3.2.4"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@eslint/eslintrc": "^3",
+    "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/ffprobe-static": "^2.0.3",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "cross-env": "^7.0.3",
-    "babel-plugin-react-compiler": "1.0.0",
+    "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.18.1",
+    "cross-env": "^10.1.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.5",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "eslint-config-next": "15.5.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
+    "typescript": "^5",
+    "ws": "^8.18.3"
   }
 }
